# CanoePi

./: .gitignore  README.md  compose.yaml
android-app/: ContainerFile  pubspec.yaml
android-app/lib/: main.dart
docs/: README.md  calibration.md  hardware.md  setup.md
pico-firmware/: CMakeLists.txt  ContainerFile  build.sh
pico-firmware/src/: main.c
tools/: build-all.sh
zero-host/: ContainerFile  package.xml  setup.py
zero-host/ble_ros_bridge/: ble_constants.py  ble_gatt_server.py  ble_ros_bridge.py
zero-host/launch/: bridge_launch.py
